<resources>
    <string name="app_name">ProjectPlant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_profile">Thông tin tài khoản</string>
    <string name="menu_wishlist">Lịch su dat hang</string>
</resources>