<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectplant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.projectplant.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.projectplant.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.projectplant.ui.wishlist.FragmentWishList"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.projectplant.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
</navigation>